--- a/Stylesheet/header.css
+++ b/Stylesheet/header.css
@@ -2,6 +2,7 @@
     Project: AJouhari Personal Website
     Date: July 2nd, 2020 */
     
+/* General */
 html {
   box-sizing: border-box;
   color: #fbfbfb;
@@ -13,6 +14,8 @@ body {
   margin: 0;
   padding: p;
 }
+
+/* Navigation */
 .topnav {
   position: fixed;
   background-color: #3B5998;
@@ -63,8 +66,13 @@ body {
   margin-top: 10px;
 }
 .topnav .content nav li a:hover {
-  color: white;
+  text-decoration: underline;
 }
+.topnav .content nav li .icon:hover {
+  text-decoration: none;
+}
+
+/* Banner */
 .banner {
   background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../Resources/Icons/wallpaper.jpg");
   background-position: center;
@@ -92,7 +100,8 @@ body {
   color: white;
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 479px) {
+  /* Container Positioning */
   .topnav .content {
     width: 80vw;
   }
@@ -104,6 +113,8 @@ body {
     float: right;
     display: block;
   }
+
+  /* Dropdown Functionality */
   .topnav.responsive .content {position: relative;}
   .topnav.responsive .content nav li .icon {
     position: absolute;
@@ -135,7 +146,73 @@ body {
     z-index: 1;
     display: block;
   }
+
+  /* Banner Text */
   .banner .banner-text h1 {
     font-size: 70px;
+  }
+}
+@media only screen and (min-width: 479px) and (max-width: 767px) {
+  /* Container Positioning */
+  .topnav .content {
+    width: 70vw;
+  }
+  .topnav .content nav li a {
+    display: none;
+    margin: 0 0;
+  }
+  .topnav .content nav li a.icon {
+    float: right;
+    display: block;
+  }
+
+  /* Dropdown Functionality */
+  .topnav.responsive .content {position: relative;}
+  .topnav.responsive .content nav li .icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  .topnav.responsive .content nav li a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+  .topnav.responsive .content nav {
+    width: 100%;
+    z-index: 2;
+    flex-wrap: wrap;
+    flex-direction: column;
+    padding-top: 20px;
+    padding-bottom: 15px;
+  }
+  .topnav.responsive {
+    position: fixed;
+    background-color: #3B5998;
+    background-size: cover;
+    width: 100vw;
+    height: auto;
+    top: 0;
+    left: 50%;
+    transform: translate(-50%, 0);
+    z-index: 1;
+    display: block;
+  }
+
+  /* Banner Text */
+  .banner .banner-text h1 {
+    font-size: 70px;
+  }
+}
+@media only screen and (min-width: 767px) and (max-width: 991px) {
+  /* Container Positioning */
+  .topnav .content {
+    width: 680px;
+  }
+}
+@media only screen and (min-width: 991px) and (max-width: 1600px) {
+  /* Container Positioning */
+  .topnav .content {
+    width: 900px;
   }
 }
