--- a/Stylesheet/header.css
+++ b/Stylesheet/header.css
@@ -16,7 +16,7 @@ body {
 }
 
 /* Navigation */
-.topnav {
+header .topnav {
   position: fixed;
   background-color: #3B5998;
   background-size: cover;
@@ -28,24 +28,24 @@ body {
   z-index: 1;
   display: block;
 }
-.topnav .content {
+header .topnav .content {
   width: 1100px;
   margin: auto auto;
 }
-.topnav .content img {
+header .topnav .content img {
   float: left;
   height: 40px;
   width: auto;
   margin-top: 20px;
 }
-.topnav .content nav {
+header .topnav .content nav {
   display: flex;
   float: right;
 }
-.topnav .content nav li {
+header .topnav .content nav li {
   list-style-type: none;
 }
-.topnav .content nav li a {
+header .topnav .content nav li a {
   float: right;
   display: block;
   color: #fbfbfb;
@@ -58,22 +58,22 @@ body {
   margin-top: 15px;
   margin-left: 32px;
 }
-.topnav .content nav li .icon {
+header .topnav .content nav li .icon {
   display: none;
   height: 40px;
   width: auto;
   font-size: 30px;
   margin-top: 10px;
 }
-.topnav .content nav li a:hover {
+header .topnav .content nav li a:hover {
   text-decoration: underline;
 }
-.topnav .content nav li .icon:hover {
+header .topnav .content nav li .icon:hover {
   text-decoration: none;
 }
 
 /* Banner */
-.banner {
+header .banner {
   background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../Resources/Icons/wallpaper.jpg");
   background-position: center;
   background-repeat: no-repeat;
@@ -86,12 +86,12 @@ body {
   transform: translate(-50%, 0);
   position: relative;
 }
-.banner .banner-text h1 {
+header .banner .banner-text h1 {
   font-size: 100px;
   font-weight: bold;
   opacity: 0.87;
 }
-.banner .banner-text {
+header .banner .banner-text {
   text-align: center;
   position: absolute;
   top: 50%;
@@ -102,31 +102,31 @@ body {
 
 @media screen and (max-width: 479px) {
   /* Container Positioning */
-  .topnav .content {
+  header .topnav .content {
     width: 80vw;
   }
-  .topnav .content nav li a {
+  header .topnav .content nav li a {
     display: none;
     margin: 0 0;
   }
-  .topnav .content nav li a.icon {
+  header .topnav .content nav li a.icon {
     float: right;
     display: block;
   }
 
   /* Dropdown Functionality */
-  .topnav.responsive .content {position: relative;}
-  .topnav.responsive .content nav li .icon {
+  header .topnav.responsive .content {position: relative;}
+  header .topnav.responsive .content nav li .icon {
     position: absolute;
     right: 0;
     top: 0;
   }
-  .topnav.responsive .content nav li a {
+  header .topnav.responsive .content nav li a {
     float: none;
     display: block;
     text-align: left;
   }
-  .topnav.responsive .content nav {
+  header .topnav.responsive .content nav {
     width: 100%;
     z-index: 2;
     flex-wrap: wrap;
@@ -134,7 +134,7 @@ body {
     padding-top: 20px;
     padding-bottom: 15px;
   }
-  .topnav.responsive {
+  header .topnav.responsive {
     position: fixed;
     background-color: #3B5998;
     background-size: cover;
@@ -148,37 +148,37 @@ body {
   }
 
   /* Banner Text */
-  .banner .banner-text h1 {
+  header .banner .banner-text h1 {
     font-size: 70px;
   }
 }
 @media only screen and (min-width: 479px) and (max-width: 767px) {
   /* Container Positioning */
-  .topnav .content {
+  header .topnav .content {
     width: 70vw;
   }
-  .topnav .content nav li a {
+  header .topnav .content nav li a {
     display: none;
     margin: 0 0;
   }
-  .topnav .content nav li a.icon {
+  header .topnav .content nav li a.icon {
     float: right;
     display: block;
   }
 
   /* Dropdown Functionality */
-  .topnav.responsive .content {position: relative;}
-  .topnav.responsive .content nav li .icon {
+  header .topnav.responsive .content {position: relative;}
+  header .topnav.responsive .content nav li .icon {
     position: absolute;
     right: 0;
     top: 0;
   }
-  .topnav.responsive .content nav li a {
+  header .topnav.responsive .content nav li a {
     float: none;
     display: block;
     text-align: left;
   }
-  .topnav.responsive .content nav {
+  header .topnav.responsive .content nav {
     width: 100%;
     z-index: 2;
     flex-wrap: wrap;
@@ -186,7 +186,7 @@ body {
     padding-top: 20px;
     padding-bottom: 15px;
   }
-  .topnav.responsive {
+  header .topnav.responsive {
     position: fixed;
     background-color: #3B5998;
     background-size: cover;
@@ -200,19 +200,19 @@ body {
   }
 
   /* Banner Text */
-  .banner .banner-text h1 {
+  header .banner .banner-text h1 {
     font-size: 70px;
   }
 }
 @media only screen and (min-width: 767px) and (max-width: 991px) {
   /* Container Positioning */
-  .topnav .content {
+  header .topnav .content {
     width: 680px;
   }
 }
 @media only screen and (min-width: 991px) and (max-width: 1600px) {
   /* Container Positioning */
-  .topnav .content {
+  header .topnav .content {
     width: 900px;
   }
 }
