--- a/stylesheets/error.css
+++ b/stylesheets/error.css
@@ -10,7 +10,7 @@ html {
 /* Banner */
 .banner {
     position: relative;
-    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../Resources/Icons/wallpaper.jpg");
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../images/icons/wallpaper.jpg");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;   
