--- a/stylesheets/header.css
+++ b/stylesheets/header.css
@@ -76,7 +76,7 @@ header .topnav .content nav li .icon:hover {
 
 /* Banner */
 header .banner {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../Resources/Icons/wallpaper.jpg");
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../images/icons/wallpaper.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;   
