--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -2,6 +2,16 @@
     Project: AJouhari Personal Website
     Date: July 2nd, 2020 */
 
+/* Transition */
+@keyframes slideInFromLeft {
+    0% {
+      transform: translateX(-100%);
+    }
+    100% {
+      transform: translateX(0);
+    }
+}
+
 /* General */
 html {
     box-sizing: border-box;
@@ -9,6 +19,7 @@ html {
     overflow-x: hidden;
     color: #fbfbfb;
     font-family: Arial, Helvetica, sans-serif;
+    animation: 1s ease-out 0s 1 slideInFromLeft;
 }
 body {
     margin: 0;
