--- a/assets/css/games.css
+++ b/assets/css/games.css
@@ -2,12 +2,23 @@
     Project: AJouhari Personal Website
     Date: June 26th, 2020 */
 
+/* Transition */
+@keyframes slideInFromLeft {
+    0% {
+      transform: translateX(-100%);
+    }
+    100% {
+      transform: translateX(0);
+    }
+}
+
 /* General */
 html {
     box-sizing: border-box;
     background-color: #1f1f1f;
     color: #fbfbfb;
     font-family: Arial, Helvetica, sans-serif;
+    animation: 1s ease-out 0s 1 slideInFromLeft;
 }
 body {
     margin: 0;
