--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2,6 +2,16 @@
     Project: AJouhari Personal Website
     Date: June 26th, 2020 */
 
+/* Transition */
+@keyframes slideInFromLeft {
+    0% {
+      transform: translateX(-100%);
+    }
+    100% {
+      transform: translateX(0);
+    }
+}
+
 /* General */
 html {
     box-sizing: border-box;
@@ -9,6 +19,7 @@ html {
     background-color: #1f1f1f;
     font-family: Arial, Helvetica, sans-serif;
     overflow-x: hidden;
+    animation: 1s ease-out 0s 1 slideInFromLeft;
 }
 body {
     margin: 0;
